--- a/public/css/search.css
+++ b/public/css/search.css
@@ -8,11 +8,25 @@ body{
 .logo{
     width: 200px;
     height: 100px;
-    margin-right: 70px;
+    margin-right: 67px;
 }
 #arrowicon{
     font-size: 30px;
     line-height: 90px;
     float: left;
     margin-left: 40px;
+    color: rgb(255, 255, 125);
+    -webkit-text-stroke-width: 1px; 
+    -webkit-text-stroke-color: white;
+    text-shadow: black 2px 2px 1px;
+}
+.dino{
+    width: 200px;
+    height: 100px;
+}
+.btn{
+    background-color: rgb(255, 255, 125);
+}
+.btn:hover{
+    background-color: rgb(218, 218, 106);
 }
