--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,9 +1,19 @@
 body{
     background-color: tomato;
 }
-#image{
+.image{
     width: auto;
-    height: 175px;
+    height: 200px;
+    border-style: solid;
+    border-color: rgb(255, 255, 125);
+    border-width: 3px;
+}
+.image2{
+    width: auto;
+    height: 100px;
+    border-style: solid;
+    border-color: rgb(255, 255, 125);
+    border-width: 3px;
 }
 .logo{
     width: 200px;
@@ -29,4 +39,16 @@ body{
 }
 .btn:hover{
     background-color: rgb(218, 218, 106);
+}
+h1, h3{
+    color: rgb(255, 255, 125);
+    -webkit-text-stroke-width: 1px; 
+    -webkit-text-stroke-color: white;
+    text-shadow: black 1px 1px 1px;
+}
+h5{
+    color: rgb(255, 255, 125);
+    -webkit-text-stroke-width: 0.5px; 
+    -webkit-text-stroke-color: white;
+    text-shadow: black 1px 1px 1px;
 }
